# modelable

./: .coverage  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  package-lock.json  package.json
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
cli/: LICENSE  README.md  mypy-baseline.txt  pyproject.toml
cli/browser/: browser-lock.json  pyproject.toml
cli/browser/overrides/modelable/llm/: __init__.py
cli/browser/overrides/modelable/registry/: __init__.py
cli/modellable_cli/: __init__.py  languages.py  llm.py  loader.py  main.py  resolver.py  validator.py
cli/modellable_cli/commands/: codegen_cmd.py  compile_cmd.py  create.py  diff_cmd.py  docs_cmd.py  export_cmd.py  lineage_cmd.py  llm_cmd.py  publish_cmd.py  pull_cmd.py  resolve_cmd.py  scenario.py  validate_cmd.py
cli/modellable_cli/compiler/: __init__.py  json_schema.py  markdown.py  typescript.py
cli/scripts/: build_browser_wheel.py  write_browser_conformance.py
cli/src/modelable/: __init__.py  __main__.py  _pydantic_py314_compat.py  cli.py  release.py
cli/src/modelable/browser/: __init__.py  ai.py  api.py  compatibility.py  dispatch.py  dto.py  errors.py  governance.py  graph.py  lineage.py
cli/src/modelable/commands/: apicurio.py  codegen.py  common.py  compile.py  create.py  diff.py  graph.py  llm.py  lsp.py  runtime.py  scenario.py  spec.py  sync.py  validate_compat.py  workspace.py
cli/src/modelable/compat/: __init__.py  checker.py  diff.py  targets.py
cli/src/modelable/compiler/: __init__.py  compiler.py  render.py  workspace.py
cli/src/modelable/diagnostics/: __init__.py  model.py
cli/src/modelable/emitters/: base.py  csharp.py  dbt_yaml.py  descriptors.py  diagnostics.py  fhir.py  fhir_validator.py  go.py  grpc.py  java.py  json_schema.py  markdown.py  odcs.py  openlineage.py  openmetadata.py  protobuf.py  python.py  rust.py  shapes.py  sql.py  targets.py  typescript.py
cli/src/modelable/expressions/: cel.py
cli/src/modelable/governance/: __init__.py  checker.py  por.py
cli/src/modelable/grammar/: modelable.lark
cli/src/modelable/graph/: __init__.py  export.py
cli/src/modelable/language/: __init__.py  completion.py  definition.py  dto.py  hover.py  positions.py  references.py  rename.py  workspace.py
cli/src/modelable/llm/: __init__.py  chat.py  config.py  context.py  conversation.py  conversation_plan.py  conversation_planner.py  engine.py  importers.py  provenance.py  providers.py  qa.py  recommendations.py  redaction.py  render.py  update_plan.py  validation_help.py  workspace_editor.py  workspace_query.py
cli/src/modelable/lsp/: __init__.py  __main__.py  code_actions.py  completion.py  conversation_protocol.py  conversation_service.py  definition.py  diagnostics.py  document_symbols.py  federation.py  folding.py  formatting.py  highlight.py  hover.py  inlay_hints.py  references.py  rename.py  semantic_tokens.py  server.py  workspace.py  workspace_symbols.py
cli/src/modelable/operations/: __init__.py  compilation.py  compilation_audit.py  file_transaction.py
cli/src/modelable/parser/: __init__.py  ir.py  parse.py  transformer.py  wire.py
cli/src/modelable/planner/: lineage.py  planner.py  plans.py
cli/src/modelable/registry/: __init__.py  apicurio.py  base.py  factory.py  ids.py  index.py  local.py  oci.py  openlineage.py  resolver.py  schema.sql  signature.py
cli/src/modelable/runtime/: __init__.py
cli/src/modelable/runtime/adapter/: __init__.py  base.py  postgres.py
cli/src/modelable/specs/: __init__.py  tracking.py
cli/src/modelable/validation/: __init__.py  semantic.py
cli/src/modellable/grammar/: modellable.lark
cli/src/modellable/parser/: parse.py
cli/tests/: conftest.py  helpers.py  test_apicurio_registry.py  test_apicurio_testcontainers.py  test_auto_projection.py  test_browser_ai.py  test_browser_api.py  test_browser_compatibility.py  test_browser_conformance.py  test_browser_governance.py  test_browser_graph.py  test_browser_lineage.py  test_browser_packaging.py  test_browser_playground_runner.py  test_browser_spike_runner.py  test_cel_validation.py  test_cli.py  test_cli_compile.py  test_cli_create.py  test_cli_inspect.py  test_codegen_docker_smoke.py  test_codegen_targets.py  test_compatibility.py  test_compilation_audit.py  test_compilation_service.py  test_compiler.py  test_conformance_fixture.py  test_conversation.py  test_conversation_plan.py  test_descriptor_artifacts.py  test_diagnostics.py  test_emit_csharp.py  test_emit_dbt_yaml.py  test_emit_fhir.py  test_emit_go.py  test_emit_grpc.py  test_emit_java.py  test_emit_json_schema.py  test_emit_markdown.py  test_emit_odcs.py  (+78 more)
cli/tests/conformance/browser/: analysis-billing.mdl  invalid-parse.mdl  invalid-reference.mdl  invalid-semantic.mdl  multi-domain-customer.mdl  multi-domain-order.mdl  single-valid.mdl
cli/tests/conformance/browser/analysis/: analysis-customer.mdl
cli/tests/conformance/browser/snapshots/: invalid-parse.json  invalid-reference.json  invalid-semantic.json  multi-domain.json  single-valid.json
cli/tests/conformance/language/: workspace-invalid-current.json  workspace-valid.json
cli/tests/fixtures/: auto_projection_complex.mdl  billing_projection.mdl  breaking_changes.mdl  cel_error_cases.mdl  customer.mdl  fhir_patient_profile.mdl  governance_export_model.mdl  materialized_projection_chain.mdl  missing_header.mdl  multi_domain_joins.mdl  multi_language_target.mdl  no_owner.mdl  pii_governance.mdl  projection_of_projection.mdl  sql_and_dbt_targets.mdl
cli/tests/fixtures/federation_multi_registry/: consumer.mdl  provider.mdl  workspace.mdl
cli/tests/fixtures/wire_golden/: wire_golden.mdl
cli/tests/fixtures/wire_golden/golden/protobuf/: platform_widget_v1.proto
cli/tests/fixtures/wire_golden/golden/rust/: platform_widget_v1.rs
docs/: README.md  adapter-architecture-spec.md  agent-governance.md  architecture.md  cel-integration-spec.md  cli-reference.md  cli-spec.md  cli-tooling-spec.md  comparison-supercargo.md  (+27 more)
(+301 files in other folders)
