[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelable"
version = "0.5.0"
description = "Compiler and language server for versioned, domain-owned data models"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Modelable contributors" },
]
maintainers = [
    { name = "ktjn" },
]
requires-python = ">=3.14"
keywords = [
    "data-contracts",
    "data-modeling",
    "lineage",
    "schema",
    "code-generation",
    "language-server",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "click>=8.1",
    "lark>=1.1",
    "pydantic==2.13.4",
    "rich>=13.0",
    "jsonschema>=4.23",
    "referencing>=0.35",
    "pygls>=2.1.1,<3",
    "psycopg[binary]>=3.2",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/ktjn/modelable"
Documentation = "https://github.com/ktjn/modelable/tree/main/docs"
Repository = "https://github.com/ktjn/modelable"
Issues = "https://github.com/ktjn/modelable/issues"
Changelog = "https://github.com/ktjn/modelable/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=4.0",
    "pytest-lsp>=1.0.1",
    "pytest-xdist>=3.0",
    "ruff>=0.15.18",
    "mypy>=2.1.0",
    "build>=1.2",
    "testcontainers==4.14.2",
]

[project.scripts]
modelable = "modelable.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/modelable"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
addopts = "-n auto"

[tool.coverage.run]
source = ["src/modelable"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501", # Line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
strict = true
check_untyped_defs = true
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "lark.*",
    "jsonschema.*",
    "referencing.*",
    "pygls.*",
    "lsprotocol.*",
    "psycopg.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-lsp>=1.0.1",
    "pytest-xdist>=3.0",
    "ruff>=0.15.18",
    "testcontainers==4.14.2",
]
