[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "modelable-browser"
version = "1.2.1"
description = "Browser compiler facade for Modelable"
requires-python = ">=3.14,<3.15"
dependencies = [
  "lark==1.3.1",
  "pydantic==2.12.5",
  "jsonschema==4.26.0",
  "referencing==0.37.0",
  "pyyaml==6.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/modelable"]
